Add McDonald's to host app menu with multi-DEX launch support
- New menu entry "McDonald's (VM)" in WestlakeActivity
- Multi-DEX launch path: detects pre-pushed mcd_classes*.dex files
- Passes -Xgc:nonconcurrent and manifest path for Hilt detection
- Inflates real activity_splash_screen.xml from APK resources
- Skips 3.3MB resources.arsc parsing (>500KB threshold)
- Total launch time ~10s from tap to rendered splash

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>